spacing issues

--- a/whisperandvault-sender/src/App.css
+++ b/whisperandvault-sender/src/App.css
@@ -128,6 +128,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding-bottom: 5%;
 }
 
 
